--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,18 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
+API_TOKEN=""
+
+DATALIX=true/false
+DATALIX_ID=""
+DATALIX_TOKEN=""
+
+DISK_NAME=""
+DISK_TYPE=""
+NETWORK_FQDN=""
+NETWORK_TRAFFIC=""
+NETWORK_UPLINK=""
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
